<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.rohangoyal2014.usictalmanac.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:src="@drawable/pattern"/>
    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textAllCaps="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <ScrollView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:digits="@string/valid"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:digits="@string/valid"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enrolment">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:digits="@string/valid"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/course"
                        android:layout_margin="8dp"
                        android:textSize="18sp"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/mca"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/btechmtech"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:layout_margin="8dp"
                        android:textSize="18sp"/>
                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/branch"
                        android:layout_margin="8dp"
                        android:textSize="18sp"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:text="@string/cse"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:text="@string/it"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:text="@string/ece"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:layout_width="match_parent"
                            android:text="Other(please specify below)"
                            android:layout_height="wrap_content" />
                        <android.support.design.widget.TextInputEditText
                            android:layout_margin="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/valid"/>
                    </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/password">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/conf_pass">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </ScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textAlignment="center" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
